added more outline

--- a/Notebooks/EDA_cleaning.ipynb
+++ b/Notebooks/EDA_cleaning.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#models to explore, rbf neural network,  m-estimator based rbf, backprop nn, auto "
+    "#models to explore, rbf neural network,  m-estimator based rbf, backprop nn"
    ]
   },
   {
@@ -73,7 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#features to check out, GDP, Inflation, yield curve, unemployment rate, "
+    "#features to check out, GDP, Inflation, yield curve, unemployment rate, M1, velocity of M1, industrial production, PCE (might be too \n",
+    "#collinear with other indicators to be useful), retail sales, oil prices, Euro to dollar exchange rate, yen to dollar exchange rate, \n",
+    "# m2, velocity of m2, real disposable personal income, imports, exports, recession status, nasdaq (maybe), price of gold, "
    ]
   }
  ],
