added baseline taylor rule model

--- a/Notebooks/pipeline_construction.ipynb
+++ b/Notebooks/pipeline_construction.ipynb
@@ -363,6 +363,8 @@
     "            if method == 'ffill':\n",
     "                X_interpolated[column] = X_interpolated[column].fillna(method='ffill')\n",
     "            elif method == 'linear':\n",
+    "                X_interpolated[column] = X_interpolated[column].replace('.', np.nan)\n",
+    "                X_interpolated[column] = X_interpolated[column].astype(float)\n",
     "                X_interpolated[column] = X_interpolated[column].interpolate(method='linear')\n",
     "            else:\n",
     "                raise ValueError(\"Invalid interpolation method. Choose 'ffill' or 'linear'.\")\n",
@@ -390,12 +392,6 @@
     "    'pct_recession': 'ffill',\n",
     "    'yen_dollar': 'linear',\n",
     "    'yield_curve': 'linear'\n",
-    "    #'1_month_ahead': 'linear',\n",
-    "    #'2_month_ahead': 'linear',\n",
-    "    #'3_month_ahead': 'linear',\n",
-    "    #'1_month_back': 'linear',\n",
-    "    #'2_month_back': 'linear',\n",
-    "    #'3_month_back': 'linear'\n",
     "        \n",
     "}\n",
     "\n",
