integrated api support and started final notebook

--- a/Notebooks/EDA_cleaning.ipynb
+++ b/Notebooks/EDA_cleaning.ipynb
@@ -31,7 +31,18 @@
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "from sklearn.model_selection import train_test_split\n",
     "from skforecast.Sarimax import Sarimax\n",
+    "import requests\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e6f8a8a-5419-40dc-b6e2-6bac9562ae1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FRED api key: e702d160a3e348cf149d4a5c3faf0d0c"
    ]
   },
   {
