--- a/Notebooks/Final_Notebook.ipynb
+++ b/Notebooks/Final_Notebook.ipynb
@@ -9,12 +9,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6317b4f-d3bc-4b5b-98b1-de2ebf1d8f71",
+   "cell_type": "markdown",
+   "id": "096c9587-ceb8-4960-81df-f394638d15ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Models mentioned in this notebook can be viewed in the other notebooks of this repository. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8abb5f94-b217-44aa-95f9-045da19c01f7",
+   "metadata": {},
+   "source": [
+    "# Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b628374c-f697-4155-8605-bbbde5e74a43",
+   "metadata": {},
+   "source": [
+    "In the fields of finance and macroeconomics the Federal Funds Target Rate (FFTR) is one of the most studied and important indicators of the state of the US economy. "
+   ]
   }
  ],
  "metadata": {
