--- a/Notebooks/pipeline_construction.ipynb
+++ b/Notebooks/pipeline_construction.ipynb
@@ -388,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_df.to_csv('merge_df_final.csv', index=True)"
+    "merge_df.to_csv('../data/merge_df_final.csv', index=True)"
    ]
   },
   {
